# 8080

./: .gitignore  CMakeLists.txt
data/: GenOpcodeCase.py  opcode.csv
src/: Opcode.cpp  Opcode.hpp  main.cpp
tool/: GenOpcode.cpp
